--- a/Homework2/Templates/es6-webpack-template/node/package.json
+++ b/Homework2/Templates/es6-webpack-template/node/package.json
@@ -16,6 +16,10 @@
     "@babel/preset-env": "^7.12.11",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.0.1",
+    "node-sass": "^5.0.0",
+    "postcss-loader": "^4.1.0",
+    "postcss-preset-env": "^6.7.0",
+    "sass-loader": "^10.1.1",
     "style-loader": "^2.0.0",
     "url-loader": "^4.1.1",
     "webpack": "^5.16.0",
@@ -23,6 +27,8 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
-    "d3": "^6.3.1"
+    "bootstrap": "^4.6.0",
+    "d3": "^6.3.1",
+    "jquery": "^3.5.1"
   }
 }
