--- a/Homework2/Templates/es6-webpack-template/node/package.json
+++ b/Homework2/Templates/es6-webpack-template/node/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/node": "^7.12.10",
+    "@babel/plugin-transform-runtime": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.0.1",
@@ -27,8 +28,10 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "@babel/runtime": "^7.12.5",
     "bootstrap": "^4.6.0",
     "d3": "^6.3.1",
+    "file-loader": "^6.2.0",
     "jquery": "^3.5.1"
   }
 }
