--- a/Homework2/pragarwal/Templates/es6-webpack-template/node/package.json
+++ b/Homework2/pragarwal/Templates/es6-webpack-template/node/package.json
@@ -32,6 +32,7 @@
     "bootstrap": "^4.6.0",
     "d3": "^6.3.1",
     "file-loader": "^6.2.0",
-    "jquery": "^3.5.1"
+    "jquery": "^3.5.1",
+    "path": "^0.12.7"
   }
 }
