--- a/Homework2/pragarwal/Templates/es6-webpack-template/node/package.json
+++ b/Homework2/pragarwal/Templates/es6-webpack-template/node/package.json
@@ -31,6 +31,7 @@
     "@babel/runtime": "^7.12.5",
     "bootstrap": "^4.6.0",
     "d3": "^6.3.1",
+    "d3-interpolate": "^2.0.1",
     "file-loader": "^6.2.0",
     "jquery": "^3.5.1",
     "path": "^0.12.7"
