--- a/FinalProject/group9/package.json
+++ b/FinalProject/group9/package.json
@@ -7,11 +7,12 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
     "d3": "^6.3.1",
-    "d3-simple-slider": "^1.10.4",
+    "ejs": "^3.1.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "topojson": "^3.0.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
