--- a/FinalProject/package.json
+++ b/FinalProject/package.json
@@ -32,7 +32,10 @@
     "@popperjs/core": "^2.6.0",
     "bootstrap": "^5.0.0-beta1",
     "d3": "^6.3.1",
+    "d3-delaunay": "^5.3.0",
+    "d3-geo-voronoi": "^1.6.0",
     "d3-simple-slider": "^1.10.3",
+    "d3-voronoi": "^1.1.4",
     "file-loader": "^6.2.0",
     "install": "^0.13.0",
     "jquery": "^3.5.1",
