--- a/FinalProject/react-template/react-d3/package.json
+++ b/FinalProject/react-template/react-d3/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-google-maps/api": "^2.1.1",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
@@ -10,6 +11,7 @@
     "d3": "^6.3.1",
     "d3-svg-legend": "^2.25.6",
     "d3-voronoi": "^1.1.4",
+    "google": "^2.1.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
