--- a/FinalProject/react-template/react-d3/ywlu/react-d3/package.json
+++ b/FinalProject/react-template/react-d3/ywlu/react-d3/package.json
@@ -6,9 +6,11 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
+    "browserify-fs": "^1.0.0",
     "d3": "^6.3.1",
     "d3-time": "^2.0.0",
     "d3-time-format": "^3.0.0",
+    "fs": "^0.0.1-security",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
