--- a/FinalProject/znwu/package.json
+++ b/FinalProject/znwu/package.json
@@ -23,6 +23,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "react-slideshow-image": "^3.4.3",
     "react-use-promise": "^0.3.1",
     "topojson": "^3.0.2",
     "typescript": "^4.1.3",
